# Privacy-Chat

./: .gitignore  README.md  SETUP_COMPLETE.md  setup.bat  start.bat
backend/: README.md  pyproject.toml  test_app.py
backend/app/: __init__.py  main.py
backend/app/security/: encryption.py  qkd.py
frontend/: package.json  tailwind.config.js
frontend/src/: App.js  App.jsx  index.css
frontend/src/components/: ChatWindow.js  ChatWindow.jsx  ErrorModal.js  ErrorModal.jsx  LoginScreen.js  LoginScreen.jsx  QKDStatusModal.js  QKDStatusModal.jsx  UserList.js  UserList.jsx
frontend/src/hooks/: useWebSocket.js
